@@ -51,11 +51,11 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   a3afe3d47e212a58f7d854d8badbc28db851aa34 2020030500 mingw32-mpc.xml
   21f6c9d72c41d551cb3c6310146c23414bd601c1 2020030500 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2020060300 mingw32-package-list.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2020070600 mingw32-package-list.xml
   0b8b7868e93c4fbaab57da8ca1fcb7700905fa92 2020013100 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
-  e824b365ba7e5fc0f009356e53943bf5f079951a 2020060300 mingw32-runtime.xml
+  4d5da81e9492fa5d5b5f0707659137469e44cd3a 2020070600 mingw32-runtime.xml
   12acb32f80e49c893167cfae82e448dd766d49bb 2013070100 mingw32-wsl-candidate.xml
   247a02890f109a5fe4996fde4af9d576dca3cd1e 2012073100 mingw32-xz.xml
   37fcda0392acfcc2194357b6bd35a3feff44d3a9 2020011000 mingw32-zlib.xml
