@@ -66,6 +66,7 @@
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar" />
         <requires eq="wsl-features-*-mingw32-cfg.tar" />
+        <release tarname="mingwrt-5.3.4-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.3.3-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.3.2-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-dev.tar.xz" />
@@ -80,6 +81,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="mingwrt-5.3.4-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.3.3-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.3.2-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-dll.tar.xz" />
@@ -94,6 +96,7 @@
       </component>
 
       <component class="lic">
+        <release tarname="mingwrt-5.3.4-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.3.3-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.3.2-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-lic.tar.xz" />
@@ -108,6 +111,7 @@
       </component>
 
       <component class="man">
+        <release tarname="mingwrt-5.3.4-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.3.3-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.3.2-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-man.tar.xz" />
@@ -141,6 +145,9 @@
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dev.tar" />
+        <release tarname="libmingwex-5.3.4-mingw32-dev.tar.xz">
+          <requires eq="libmingwex-%-mingw32-dll-2.tar" />
+        </release>
         <release tarname="libmingwex-5.3.3-mingw32-dev.tar.xz">
           <requires eq="libmingwex-%-mingw32-dll-2.tar" />
         </release>
@@ -177,6 +184,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="libmingwex-5.3.4-mingw32-dll-2.tar.xz" />
         <release tarname="libmingwex-5.3.3-mingw32-dll-2.tar.xz" />
         <release tarname="libmingwex-5.3.2-mingw32-dll-3.tar.xz" />
         <release tarname="libmingwex-5.3.1-mingw32-dll-2.tar.xz" />
@@ -210,6 +218,7 @@
       <licence tarname="mingwrt-%-mingw32-lic.tar.%" />
 
       <component class="dev">
+        <release tarname="w32api-5.3.4-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.3.3-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.3.2-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.3.1-mingw32-dev.tar.xz" />
